-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0-beta
-
None
-
59ef28851776c1c23dca3aa1b1ae1a02b7663b8b 666c810505e53e95fc17487f37feaf852f1e22ac
The FileInProjectFinder seems to look them up correctly but the profiler still displays the qrc:/ paths and cannot navigate the editor to the files.
| For Gerrit Dashboard: QTCREATORBUG-11525 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 78906,1 | QmlProfiler: Accept qrc:/ as local files when setting initial details | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 78907,1 | QmlProfiler: repeat lookup of filename when retrieving source location | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |