QmlProfiler: Accept qrc:/ as local files when setting initial details

If this is not done a lot of Creating and Compiling events look bad.

Task-number: QTCREATORBUG-11525
Change-Id: I2af584d3d0468cbc54960c4e16036e9bcf42511b
Reviewed-by: Kai Koehne <kai.koehne@digia.com>